# anki-mcq-importer

./: .gitignore  README.md  TESTING_FORMATTING.md  anki_mcq_importer.py  pyproject.toml  requirements.txt
.kiro/specs/keyword-based-anki-generator/: design.md  requirements.md  tasks.md
examples/: sample_questions.txt  test_formatting.py
